Refac: Updated LogService to log LogMessage directly instead over unrequired Log object